# school-labels

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
examples/: attendance.csv  email-password.csv
src/school_labels/: __init__.py  __main__.py  cli.py  generator.py
src/school_labels/templates/: __init__.py  attendance.py  avery7160.py  base.py  email_password.py  initial_password.py
tests/: conftest.py  test_cli.py  test_generator.py  test_templates.py
